--- a/task-management/theme/templates/base.html
+++ b/task-management/theme/templates/base.html
@@ -1,19 +1,31 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    <title>Django Tailwind</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
-
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
-		</div>
-	</body>
+    <head>
+        <metae charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Task management web application." />
+        <meta name="keywords"
+              content="task, management, productivity, django, web app" />
+        <title>
+            {% block title %}
+            {% endblock title %}
+        </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+Bengali:wght@100..900&display=swap"
+              rel="stylesheet" />
+        {% tailwind_css %}
+        <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+        </style>
+    </head>
+    <body class="bg-gray-50 p-6">
+        <main>
+            {% block theme %}
+            {% endblock theme %}
+        </main>
+    </body>
 </html>
