--- a/task-management/tasks/templates/form.html
+++ b/task-management/tasks/templates/form.html
@@ -33,6 +33,7 @@
                   class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 max-w-md mx-auto">
                 {% csrf_token %}
                 {{ form.as_p }}
+                {{ task_detail_form.as_p }}
                 <input type="submit"
                        value="Submit"
                        class="mt-2 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline cursor-pointer">
