--- a/task-management/tasks/templates/dashboard/manager-dashboard.html
+++ b/task-management/tasks/templates/dashboard/manager-dashboard.html
@@ -31,6 +31,14 @@
             {% endfor %}
           </div>
           <div class="text-gray-500">{{ task.created_at|timesince }}</div>
+          <div>
+            <a href="{% url 'update_task' task.id %}"
+               class="text-blue-600 hover:underline">Edit</a>
+          </div>
+          <form method="post" action="{% url 'delete_task' task.id %}" class="inline">
+            {% csrf_token %}
+            <button type="submit" class="text-red-600 hover:underline cursor-pointer">Delete</button>
+          </form>
         </div>
       {% endfor %}
     </div>
