--- a/task-management/tasks/templates/dashboard/dashboard.html
+++ b/task-management/tasks/templates/dashboard/dashboard.html
@@ -6,7 +6,14 @@
   <div class="max-w-[1400px] mx-auto">
     <!-- Header  -->
     <header class="flex justify-between items-center mb-8">
-      <h1 class="text-2xl font-semibold">Dashboard</h1>
+      <div class="flex items-center gap-4">
+        <h1 class="text-2xl font-semibold">Dashboard</h1>
+        <a href="{% url 'sign_out' %}">
+          <button class="bg-red-600 text-white cursor-pointer rounded-full hover:bg-red-700  font-medium py-2 px-4  transition duration-200">
+            Sign Out
+          </button>
+        </a>
+      </div>
       <div class="flex items-center gap-4">
         <button class="p-2 rounded-full hover:bg-gray-100 relative">
           <svg xmlns="http://www.w3.org/2000/svg"
@@ -18,7 +25,6 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
           </svg>
         </button>
-        <button class="w-10 h-10 bg-blue-500 rounded-full text-white font-semibold ">B</button>
       </div>
     </header>
     <div class="grid grid-cols-4 gap-6 mb-8">
